test/invalid/baseline/const-nullable.txt
Syntax error at line 3 in const-nullable.webidl, since `interface MyConstants`:
  const boolean? ARE_WE_THERE_YET = false;
               ^ Unexpected nullable constant type
